# python-flask-demo-py-scan

./: pyproject.toml
.github/workflows/: python-app.yml
