[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-demo"
authors = [
  { name="Guillaume Dequenne", email="guillaume.dequenne@sonarsource.com" }
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
version = "0.0.1"
dependencies = [
"Flask==2.1.1"
"pytest==7.1.1"
"pytest-cov==3.0.0"
]

[sonar]
projectKey="davidkunzmann_flask-demo"
organization="davidkunzmann"
sources="pokedex"
tests="tests"
python.version = "3.10"
python.coverage.reportPaths="cov.xml"
host.url="https://sonarcloud.io"
